- App: Create Missing Fields