@@ -20,73 +20,42 @@
  */
 package com.viglet.turing.solr;
 
-import com.viglet.turing.commons.se.field.TurSEFieldType;
-
-import java.text.DateFormat;
 import java.text.SimpleDateFormat;
 import java.util.ArrayList;
-import java.util.Collections;
 import java.util.Date;
 import java.util.TimeZone;
 
 public class TurSolrField {
 
 	public static final String EMPTY_STRING = "";
-
-	public static Integer convertFieldToInt(Object attrValue) {
-		if (attrValue == null) {
-			return 0;
-		} else if (attrValue instanceof String string) {
-			return Integer.parseInt(string);
-		} else if (attrValue instanceof ArrayList<?> arrAttValue) {
-			if (arrAttValue.get(0) instanceof Long longValue) {
-				return longValue.intValue();
-			} else if (arrAttValue.get(0) instanceof String stringValue) {
-				return Integer.parseInt(stringValue);
-			} else {
-				return (Integer) arrAttValue.get(0);
-			}
-
-		} else if (attrValue instanceof Long longValue) {
-			return longValue.intValue();
-		} else {
-			return (int) attrValue;
-		}
-	}
-
-	public static Long convertFieldToLong(Object attrValue) {
-		if (attrValue == null) {
-			return 0L;
-		} else if (attrValue instanceof String stringValue) {
-			return Long.parseLong(stringValue);
-		} else if (attrValue instanceof ArrayList<?> arrAttValue) {
-			if (arrAttValue.get(0) instanceof String stringValue) {
-				return Long.parseLong(stringValue);
-			} else {
-				return (Long) arrAttValue.get(0);
-			}
-		} else {
-			return (long) attrValue;
-		}
-	}
+	public static final String DATE_FORMAT = "yyyy-MM-dd'T'HH:mm:ss'Z'";
+	public static final String GMT = "GMT";
 
 	public static String convertFieldToString(Object attrValue) {
-		if (attrValue == null) {
-			return EMPTY_STRING;
-		} else if (attrValue instanceof String) {
-			return (String) attrValue;
-		} else if (attrValue instanceof ArrayList<?> arrayListValue) {
-			return arrayListToString(arrayListValue);
-		} else if (attrValue instanceof Long longValue) {
-			return longToString(longValue);
-		} else if (attrValue instanceof Object[] objectValue) {
-			return objectArrayToString(objectValue);
-		} else if (attrValue instanceof Date dateValue) {
-			SimpleDateFormat simpleDateFormat = new SimpleDateFormat("yyyy-MM-dd'T'HH:mm:ss'Z'");
-			simpleDateFormat.setTimeZone(TimeZone.getTimeZone("GMT"));
-			return simpleDateFormat.format(dateValue);
-		} else {
-			return attrValue.toString();
+		switch (attrValue) {
+			case null -> {
+				return EMPTY_STRING;
+			}
+			case String s -> {
+				return s.trim();
+			}
+			case ArrayList<?> arrayListValue -> {
+				return arrayListToString(arrayListValue).trim();
+			}
+			case Long longValue -> {
+				return longToString(longValue).trim();
+			}
+			case Object[] objectValue -> {
+				return objectArrayToString(objectValue).trim();
+			}
+			case Date dateValue -> {
+				SimpleDateFormat simpleDateFormat = new SimpleDateFormat(DATE_FORMAT);
+				simpleDateFormat.setTimeZone(TimeZone.getTimeZone(GMT));
+				return simpleDateFormat.format(dateValue);
+			}
+			default -> {
+				return attrValue.toString().trim();
+			}
 		}
 	}
 
@@ -94,97 +63,30 @@ public class TurSolrField {
 		if (arrAttrValue == null) {
 			return EMPTY_STRING;
 		} else if (arrAttrValue[0] instanceof String stringValue) {
-			return stringValue;
+			return stringValue.trim();
 		} else if (arrAttrValue[0] instanceof Long longValue) {
 			return longValue.toString();
 		} else if (arrAttrValue[0] instanceof Date dateValue) {
 			return dateValue.toString();
 		} else {
-			return (String) arrAttrValue[0];
+			return arrAttrValue[0].toString().trim();
 		}
 	}
 
 	private static String arrayListToString(ArrayList<?> arrAttValue) {
 		if (arrAttValue == null) {
 			return EMPTY_STRING;
-		} else if (arrAttValue.get(0) instanceof String stringValue) {
-			return stringValue;
-		} else if (arrAttValue.get(0) instanceof Long longValue) {
-			return longValue.toString();
-		} else if (arrAttValue.get(0) instanceof Date dateValue) {
-			return dateValue.toString();
+		} else if (arrAttValue.getFirst() instanceof String stringValue) {
+			return stringValue.trim();
+		} else if (arrAttValue.getFirst() instanceof Long longValue) {
+			return longValue.toString().trim();
+		} else if (arrAttValue.getFirst() instanceof Date dateValue) {
+			return dateValue.toString().trim();
 		} else {
-			return (String) arrAttValue.get(0);
+			return ((String) arrAttValue.getFirst()).trim();
 		}
 	}
-
-	public static Object[] convertFieldToArray(Object attrValue) {
-		if (attrValue == null) {
-			return null;
-		} else if (attrValue instanceof String stringValue) {
-			return new String[] { stringValue };
-		} else if (attrValue instanceof Long longValue) {
-			return new Long[] { longValue };
-		} else if (attrValue instanceof ArrayList<?> arrayListValue) {
-			return arrayListValue.toArray(new Object[0]);
-		} else {
-			return (Object[]) attrValue;
-		}
-	}
-
-	public static String convertFieldToDate(Object attrValue) {
-		if (attrValue == null) {
-			return EMPTY_STRING;
-		} else if (attrValue instanceof ArrayList<?> arrayListValue) {
-			return arrayListToString(arrayListValue);
-		} else if (attrValue instanceof Long longValue) {
-			return longToString(longValue);
-		} else if (attrValue instanceof Date dateValue) {
-			return dateToString(dateValue);
-		} else {
-			return (String) attrValue;
-		}
-	}
-
 	private static String longToString(Long longValue) {
 		return longValue.toString();
-	}
-
-	private static String dateToString(Date dateValue) {
-		TimeZone tz = TimeZone.getTimeZone("UTC");
-		DateFormat df = new SimpleDateFormat("yyyy-MM-dd'T'HH:mm:ss'Z'");
-		df.setTimeZone(tz);
-		return df.format(dateValue);
-	}
-
-	public static boolean convertFieldToBoolean(Object attrValue) {
-		if (attrValue == null) {
-			return false;
-		} else if (attrValue instanceof String) {
-			return Boolean.parseBoolean((String) attrValue);
-		} else if (attrValue instanceof ArrayList<?> arrAttValue) {
-			if (arrAttValue.get(0) instanceof String) {
-				return Boolean.parseBoolean((String) arrAttValue.get(0));
-			} else if (arrAttValue.get(0) instanceof Long) {
-				return (((Long) arrAttValue.get(0)) > 0);
-			} else {
-				return (boolean) attrValue;
-			}
-		} else if (attrValue instanceof Long) {
-			return (((Long) attrValue) > 0);
-		} else {
-			return (boolean) attrValue;
-		}
-	}
-
-	public static Object convertField(TurSEFieldType finalType, Object attrValue) {
-        return switch (finalType) {
-            case INT -> convertFieldToInt(attrValue);
-            case LONG -> convertFieldToLong(attrValue);
-            case STRING -> convertFieldToString(attrValue);
-            case DATE -> convertFieldToDate(attrValue);
-            case BOOL -> convertFieldToBoolean(attrValue);
-            default -> attrValue;
-        };
 	}
 }
